Fix stats row spacing, readability change

--- a/app/assets/src/components/views/SampleViewV2/sample_view_v2.scss
+++ b/app/assets/src/components/views/SampleViewV2/sample_view_v2.scss
@@ -47,7 +47,7 @@
       }
 
       .clearAllFilters {
-        margin-left: $space-s;
+        margin-left: $space-xxxs;
         font-weight: $font-weight-semibold;
         white-space: nowrap;
         cursor: pointer;
